Add page counts for Grasset editions

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -208,11 +208,12 @@
       </p>
       <ul>
         <li class="book" lang="fr">Girard, René:
-          <strong class="booktitle">Mensonge romantique et vérité romanesque</strong>. Grasset, 1961.
+          <strong class="booktitle">Mensonge romantique et vérité romanesque</strong>. Grasset, 1961 (1977). (320 pages)
           <a href="http://www.grasset.fr/mensonge-romantique-et-verite-romanesque-9782246004073"><abbr>ISBN</abbr> 9782246004073</a>.
           <br /><span lang="en-GB">Girard's first book analyses novels by Cervantes,
           Flaubert, Stendahl and Dostoyevsky,
-          and formulates his theory of mimetic desire.<br />Translations:</span>
+          and formulates his theory of mimetic desire.
+          The book was reprinted in the series <span lang="fr">Les Cahiers Rouges</span> in 2001.<br />Translations:</span>
           <ul>
             <li lang="en"><i class="booktitle">Deceit, Desire, and the Novel: Self and Other in Literary Structure</i>. Translated by Yvonne Freccero. Johns Hopkins University Press, 1976.
             <a href="https://jhupbooks.press.jhu.edu/content/deceit-desire-and-novel"><abbr>ISBN</abbr> 9780801818301</a>.
@@ -234,13 +235,13 @@
           <span lang="en-GB">(see below).</span>
         </li>
         <li class="book" lang="fr">Girard, René:
-          <strong class="booktitle">La Violence et le sacré</strong>. Grasset, 1972.
+          <strong class="booktitle">La Violence et le sacré</strong>. Grasset, 1972. (456 pages)
           <a href="http://www.grasset.fr/la-violence-et-le-sacre-9782246000518"><abbr>ISBN</abbr> 9782246000518</a>.
           <br /><span lang="en-GB">In his third book, Girard looks for mimesis
           in myths and older literary texts (especially
           <a href="https://en.wikipedia.org/wiki/Greek_tragedy">Greek tragedy</a>)
           and describes how mimesis leads to scapegoating and the origin of
-          human culture and religion. <br />Translations: </span>
+          human culture and religion.<br />Translations: </span>
           <ul>
             <li lang="en"><i class="booktitle">Violence and the Sacred</i>. Translated by Patrick Gregory. Johns Hopkins University Press, 1979.
               <a href="https://jhupbooks.press.jhu.edu/content/violence-and-sacred"><abbr>ISBN</abbr> 9780801822186</a>.
@@ -284,7 +285,7 @@
           <br />A collection of nine articles and an interview.
         </li>
         <li class="book" lang="fr">Girard, René:
-          <i class="booktitle"><strong>Des choses cachées depuis la fondation du monde</strong>: Recherches avec Jean-Michel Oughourlian et Guy Lefort</i>. Grasset, 1978.
+          <i class="booktitle"><strong>Des choses cachées depuis la fondation du monde</strong>: Recherches avec Jean-Michel Oughourlian et Guy Lefort</i>. Grasset, 1978 (2001). (492 pages)
           <a href="http://www.grasset.fr/des-choses-cachees-depuis-la-fondation-du-monde-9782246618416"><abbr>ISBN</abbr> 9782246618416</a>.
           <br /><span lang="en-GB">This book consists of conversations between
           René Girard and the psychiatrists <span lang="fr">Jean-Michel Oughourlian</span> and <span lang="fr">Guy Lefort</span>.
@@ -309,7 +310,7 @@
           </ul>
         </li>
         <li class="book" lang="fr">Girard, René:
-          <i class="booktitle">Le Bouc émissaire</i>. Grasset, 1982.
+          <i class="booktitle">Le Bouc émissaire</i>. Grasset, 1982. (300 pages)
           <a href="http://www.grasset.fr/le-bouc-emissaire-9782246267812"><abbr>ISBN</abbr> 9782246267812</a>.
           <br /><span lang="en-GB">Much of this book discusses
           the persecution of victims or scapegoats in medieval texts.
@@ -327,7 +328,7 @@
           </ul>
         </li>
         <li class="book" lang="fr">Girard, René:
-          <i class="booktitle">La Route antique des hommes pervers</i>. Grasset, 1985.
+          <i class="booktitle">La Route antique des hommes pervers</i>. Grasset, 1985. (252 pages)
           <a href="http://www.grasset.fr/la-route-antique-des-hommes-pervers-9782246351115"><abbr>ISBN</abbr> 9782246351115</a>.
           <br /><span lang="en-GB">About the book of
           <a href="https://en.wikipedia.org/wiki/Job_%28biblical_figure%29" class="booktitle">Job</a>.
@@ -358,7 +359,7 @@
         </li>
         <li class="book"><span lang="fr">Girard, René</span>:
           <strong class="booktitle" lang="en-US">A Theater of Envy: Shakespeare</strong>. Oxford University Press, 1991.
-          <a href="http://www.grasset.fr/shakespeare-les-feux-de-lenvie-9782246249917"><abbr>ISBN</abbr> 9782246249917</a>.
+          <a href="https://www.worldcat.org/title/theater-of-envy-william-shakespeare/oclc/901977525"><abbr>ISBN</abbr> 9780195053395 / 9782246249917</a>.
           <br />This book is based on journal articles that Girard had
           published in the 1970s and 1980s.<!--@@check-->
           Girard shows that Shakespeare understood mimetic desire, even in early works such as
@@ -368,7 +369,7 @@
           in subtext rather than discussing them openly.
           <br />Translations:
           <ul>
-            <li lang="fr"><i class="booktitle">Shakespeare&nbsp;: les feux de l'envie</i>. Grasset, 1990.
+            <li lang="fr"><i class="booktitle">Shakespeare&nbsp;: les feux de l'envie</i>. Grasset, 1990. (444 pages)
               <a href="http://www.grasset.fr/shakespeare-les-feux-de-lenvie-9782246249917"><abbr>ISBN</abbr> 9782246249917</a>.
             </li>
             <li lang="de"><i class="booktitle">Shakespeare: Theater des Neides</i>. Übersetzt aus dem Englischen von Wiebke Meier. Hanser, 2011.
@@ -393,7 +394,7 @@
           </ul>
         </li>
         <li class="book" lang="fr">Girard, René:
-          <i class="booktitle">Je vois Satan tomber comme l'éclair</i>. Grasset, 1999.
+          <i class="booktitle">Je vois Satan tomber comme l'éclair</i>. Grasset, 1999. (297 pages)
           <a href="http://www.grasset.fr/je-vois-satan-tomber-comme-leclair-9782246267911"><abbr>ISBN</abbr> 9782246267911</a>.
           <br /><span lang="en-GB">Translations:</span>
           <ul>
@@ -420,7 +421,7 @@
           </ul>
         </li>
         <li class="book" lang="fr">Girard, René:
-          <i class="booktitle">La voix méconnue du réel</i>. Grasset, 2002.
+          <i class="booktitle">La voix méconnue du réel</i>. Grasset, 2002. (304 pages)
           <a href="http://www.grasset.fr/la-voix-meconnue-du-reel-9782246611011"><abbr>ISBN</abbr> 9782246611011</a>.
         </li>
         <li class="book" lang="fr">Girard, René:
@@ -473,7 +474,7 @@
           <abbr>ISBN</abbr> 9782708239227.
         </li>
         <li class="book" lang="fr">Girard, René:
-          <i class="booktitle">De la violence à la divinité</i>. Grasset, 2007.
+          <i class="booktitle">De la violence à la divinité</i>. Grasset, 2007. (1504 pages)
           <a href="http://www.grasset.fr/de-la-violence-la-divinite-9782246721116"><abbr>ISBN</abbr> 9782246721116</a>.
           <span lang="en-GB">Contains
             <i class="booktitle" lang="fr">Mensonge romantique et vérité romanesque</i>,
