--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -606,6 +606,12 @@
       </ul>
     </section>
 
+    <!--
+      Paul Dumouchel, ed.: Colloque de Cerisy: Violence et vérité - Autour de René Girard. Grasset, 1985. ISBN 9782246337218. http://www.grasset.fr/violence-et-verite-autour-de-rene-girard-9782246337218
+      Cynthia L. Haven: Evolution of Desire: A Life of René Girard. Studies in Violence, Mimesis, & Culture. Michigan State University Press, April 2018. ISBN 9781611862836. http://msupress.org/books/book/?id=50-1D0-446F
+        blog post: http://bookhaven.stanford.edu/2018/03/golden-thoughts-for-a-nuclear-age-from-the-introduction-of-evolution-of-desire-a-life-of-rene-girard/
+        excerpt: http://churchlife.nd.edu/2018/02/28/golden-thoughts-for-a-new-nuclear-age/
+    -->
     <section>
       <h2 id="applications">Books and Articles Applying the Mimetic Theory</h2>
       <ul>
@@ -642,6 +648,11 @@
           <a href="http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.514.7959">What Is Deviated Transcendancy? Woolf's The Waves as a Textbook Case</a>,
           <i class="website">Imitatio.org</i>.
           <!--@@PDF at http://www.imitatio.org/uploads/tx_rtgfiles/What_is_Deviated_Transcendency.pdf -->
+        </li>
+        <li lang="fr">Deguy, Michel; Dupuy, Jean-Pierre (editors):
+          <i class="booktitle">René Girard et le problème du mal</i>. Grasset, 1982. (334 pages)
+          <a href="https://www.grasset.fr/livres/rene-girard-et-le-probleme-du-mal-9782246249719"><abbr>ISBN</abbr> 9782246249719</a>.
+          <br /><span lang="en">Collection of essays; also contains biography &amp; bibliography of René Girard.</span>
         </li>
         <li><span lang="fr">Donnadieu, Gérard:
           <i class="booktitle">La violence dévoiléé. Pour comprendre René Girard</i>. Saint-Léger Production</span>s, 2017.
@@ -796,15 +807,6 @@
         <!--Wolfgang Palaver: https://uibk.academia.edu/WolfgangPalaver & https://de.wikipedia.org/wiki/Wolfgang_Palaver -->
       </ul>
     </section>
-
-    <!--
-      Michel Deguy & Jean-Pierre Dupuy, eds.: René Girard et le problème du mal. Grasset, 1982. ISBN 9782246249719. http://www.grasset.fr/rene-girard-et-le-probleme-du-mal-9782246249719 
-        Collection of essays; also contains biography & bibliography of René Girard.
-      Paul Dumouchel, ed.: Colloque de Cerisy: Violence et vérité - Autour de René Girard. Grasset, 1985. ISBN 9782246337218. http://www.grasset.fr/violence-et-verite-autour-de-rene-girard-9782246337218 
-      Cynthia L. Haven: Evolution of Desire: A Life of René Girard. Studies in Violence, Mimesis, & Culture. Michigan State University Press, April 2018. ISBN 9781611862836. http://msupress.org/books/book/?id=50-1D0-446F
-        blog post: http://bookhaven.stanford.edu/2018/03/golden-thoughts-for-a-nuclear-age-from-the-introduction-of-evolution-of-desire-a-life-of-rene-girard/
-        excerpt: http://churchlife.nd.edu/2018/02/28/golden-thoughts-for-a-new-nuclear-age/ 
-    -->
 
     <section>
       <h2 id="commemorations">Obituaries and Commemorations</h2>
