Add: Dumouchel: Colloque de Cerisy: Violence et vérité - Autour de René Girard

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -607,7 +607,6 @@
     </section>
 
     <!--
-      Paul Dumouchel, ed.: Colloque de Cerisy: Violence et vérité - Autour de René Girard. Grasset, 1985. ISBN 9782246337218. http://www.grasset.fr/violence-et-verite-autour-de-rene-girard-9782246337218
       Cynthia L. Haven: Evolution of Desire: A Life of René Girard. Studies in Violence, Mimesis, & Culture. Michigan State University Press, April 2018. ISBN 9781611862836. http://msupress.org/books/book/?id=50-1D0-446F
         blog post: http://bookhaven.stanford.edu/2018/03/golden-thoughts-for-a-nuclear-age-from-the-introduction-of-evolution-of-desire-a-life-of-rene-girard/
         excerpt: http://churchlife.nd.edu/2018/02/28/golden-thoughts-for-a-new-nuclear-age/
@@ -675,6 +674,10 @@
           <i class="booktitle">L'auto-organisation. De la physique au politique</i>. Colloque de Cerisy, 1981. Editions du Seuil, 1983, 1994. (560 pages)
           <a href="http://www.seuil.com/ouvrage/l-auto-organisation-de-la-physique-au-politique-colloque-de-cerisy/9782020220439" hreflang="fr"><abbr>ISBN</abbr> 9782020220439</a>.
           <br />(<a href="http://www.ccic-cerisy.asso.fr/autoorgTM83.html" hreflang="fr">Centre Culturel International de Cerisy</a>.)
+        </li>
+        <li lang="fr">Dumouchel, Paul (editor):
+          <i class="booktitle">Colloque de Cerisy: Violence et vérité - Autour de René Girard</i>. Grasset, 1985. (624 pages)
+          <a href="https://www.grasset.fr/livres/violence-et-verite-autour-de-rene-girard-9782246337218"><abbr>ISBN</abbr> 9782246337218</a>.
         </li>
         <li><span lang="fr">Dupuy, Jean-Pierre:
           <i class="booktitle">La Jalousie: une géométrie du désir</i>. Seuil,</span> 2016. (192 pages)
