Add reprint of A Theater of Envy

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -360,6 +360,7 @@
         <li class="book"><span lang="fr">Girard, René</span>:
           <strong class="booktitle" lang="en-US">A Theater of Envy: Shakespeare</strong>. Oxford University Press, 1991.
           <a href="https://www.worldcat.org/title/theater-of-envy-william-shakespeare/oclc/901977525"><abbr>ISBN</abbr> 9780195053395 / 9782246249917</a>.
+          Reprinted by St. Augustine's Press, <a href="https://www.staugustine.net/our-books/books/a-theater-of-envy/"><abbr>ISBN</abbr> 978-1-58731-860-3</a> (376 pages).
           <br />This book is based on journal articles that Girard had
           published in the 1970s and 1980s.<!--@@check-->
           Girard shows that Shakespeare understood mimetic desire, even in early works such as
