Add: Pally: Mimesis and Sacrifice

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -742,6 +742,11 @@
           <a href="https://msupress.org/9781611862621/mimetic-theory-and-world-religions/"><abbr>ISBN</abbr> 9781611862621</a>.
           <!--@@other books in the series: http://msupress.org/books/series/?id=Studies+in+Violence%2C+Mimesis%2C+%26+Culture -->
         </li>
+        <li>Pally, Marcia (editor):
+          <i class="booktitle">Mimesis and Sacrifice: Applying Girard's Mimetic Theory Across the Disciplines</i>.
+          Violence, Desire, and the Sacred. Bloomsbury, 2019. (264 pages).
+          <a href="https://www.bloomsbury.com/uk/mimesis-and-sacrifice-9781350057418/"><abbr>ISBN</abbr> 9781350057418</a>.
+        </li>
         <li><span lang="fr">Perret, Bernard:
           <i class="booktitle">Penser la foi chrétienne après René Girard</i>. Ad Solem</span>, 2018. (330 pages)
           <a href="https://www.editionsadsolem.fr/livre/fiche/penser-la-foi-chretienne-apres-rene-girard-9782372980852"><abbr>ISBN</abbr> 9782372980852</a>.
