Add: Bubbio & Fleming: Mimetic Theory and Film

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -630,7 +630,7 @@
         </li>
         <li>Antonello, Pierpaolo; Webb, Heather (editors):
           <i class="booktitle">Mimesis, Desire, and the Novel: René Girard and Literary Criticism</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2015. (358 pages)
-          <a href="http://msupress.org/books/book/?id=50-1D0-3F59"><abbr>ISBN</abbr> 9781611861655</a>.
+          <a href="https://msupress.org/9781611861655/mimesis-desire-and-the-novel/"><abbr>ISBN</abbr> 9781611861655</a>.<!--@@$29.95-->
         </li>
         <li>Bailie, Gil:
           <i class="booktitle">Violence Unveiled: Humanity at the Crossroads</i>. Crossroad Publishing Company, 1996. (312 pages)
@@ -638,6 +638,10 @@
           <br />See the <a href="http://girardianlectionary.net/res/vu_accomplished.htm">excerpt from <i class="booktitle">Violence Unveiled</i></a>
           on Paul Nuechterlein's Girardian Lectionary website.
           <!--See also http://stmaryvalleybloom.org/violence.html -->
+        </li>
+        <li>Bubbio, Paolo Diego; Fleming, Chris (editors):
+          <i class="booktitle">Mimetic Theory and Film</i>. Violence, Desire, and the Sacred. Bloomsbury, 2020. (224 pages)
+          <a href="https://www.bloomsbury.com/uk/mimetic-theory-and-film-9781501367663/"><abbr>ISBN</abbr> 9781501367663</a>.
         </li>
         <li>De Keukelaere, Simon:
           <a href="http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.514.7959">What Is Deviated Transcendancy? Woolf's The Waves as a Textbook Case</a>,
