Move two links to section on book recommendations

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1652,14 +1652,26 @@
         HIW: Verkorte bachelor: https://hiw.kuleuven.be/ned/toekomstigestudent/verkortebachelor.html
          -> in avondonderwijs: https://hiw.kuleuven.be/ned/avondonderwijs/index.html -> https://hiw.kuleuven.be/ned/avondonderwijs/bachelor.html
         HIW Writing Lab: http://hiw.kuleuven.be/eng/programmes/writinglab
-        Radboud Universiteit: Verkort traject Filosofie : http://www.ru.nl/opleidingen/bachelor/filosofie/studieprogramma/verkort-traject/
+        Radboud Universiteit: Verkort traject Filosofie: http://www.ru.nl/opleidingen/bachelor/filosofie/studieprogramma/verkort-traject/
       -->
     </section>
 
     <section>
       <h2>Chinese Philosophy</h2>
       <ul>
-        <!--@@section Chinese philosophy-->
+        <li><a href="http://journal.hep.com.cn/fpc/EN/1673-3436/current.shtml">Frontiers of Philosophy in China</a> (journal).
+        </li>
+        <li><a href="https://onlinelibrary.wiley.com/journal/15406253">Journal of Chinese Philosophy</a>.
+        </li>
+        <li>Zhang, Wei:
+          <i class="booktitle">What Is Enlightenment: Can China Answer Kant's Question?</i>.
+          <abbr>SUNY</abbr> series in Chinese Philosophy and Culture. <abbr>SUNY</abbr> Press, 2010. (131 pages)
+          <a href="http://www.sunypress.edu/p-4994-what-is-enlightenment.aspx"><abbr>ISBN</abbr> 978-1-4384-3106-2</a>.
+          <!--@@PDF excerpt available online-->
+          <br />See also: Nelson, Eric S.:
+          <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/j.1540-6253.2011.01681.x">What Is Enlightenment: Can China Answer Kant's Question? – By Wei Zhang</a>,
+          <i class="journal">Journal of Chinese Philosophy</i>, Volume 38, Issue 4, December 2011.
+        </li>
         <li>Confucius:
           <i class="booktitle">The Analects: Conclusions and Conversations of Confucius</i>.
           Translated by Moss Roberts. University of California Press, November 2020. (176 pages)
@@ -2035,6 +2047,55 @@
           <br />This is a
           <q>list of suggested further readings on Africana, Chinese, Christian, Continental, Indian, Indigenous, Islamic, Jewish, and Latin American philosophy</q>.
         </li>
+        <li>
+          <a href="https://fivebooks.com/best-books/socrates/">The best books on Socrates recommended by M M McCabe</a>,
+          <i class="website">Five Books</i>, no date (possibly April 2016).
+          <a href="https://www.kcl.ac.uk/people/mm-mccabe">M. M. McCabe</a>, author of
+          <i class="booktitle">Platonic Conversations</i>, recommends the following books:
+          <ul>
+            <li><i class="booktitle">Apology</i> by Plato (included in <abbr>e.g.</abbr>
+              <a href="https://www.hackettpublishing.com/five-dialogues"><i class="booktitle">Five Dialogues: Euthyphro, Apology, Crito, Meno, Phaedo</i></a>
+              translated by G. M. A. Grube, an edition that provides detailed footnotes).
+            </li>
+            <li><i class="booktitle">The Clouds</i>, a comedy by Aristophanes.
+            </li>
+            <li><i class="booktitle">Theaetetus</i> by Plato.
+            </li>
+            <li>
+              <a href="https://www.cornellpress.cornell.edu/book/9780801497872/socrates-ironist-and-moral-philosopher/"><i class="booktitle">Socrates, Ironist and Moral Philosopher</i></a>
+              by Gregory Vlastos (Cornell University Press, 1991).
+            </li>
+            <li>
+              <a href="https://www.ucpress.edu/book/9780520224902/the-art-of-living"><i class="booktitle">The Art of Living: Socratic Reflections from Plato to Foucault</i></a>
+              by Alexander Nehamas (University of California Press, 2000).
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="https://fivebooks.com/best-books/spinoza-steven-nadler/">The best books on Spinoza recommended by Steven Nadler</a>,
+          <i class="website">Five Books</i>, 14.10.2020.
+          Steven Nadler recommends the following books:
+          <ul>
+            <li><a href="https://press.princeton.edu/books/hardcover/9780691072227/the-collected-works-of-spinoza-volume-i"><i class="booktitle">The Collected Works of Spinoza, Volume I</i></a>
+              and
+              <a href="https://press.princeton.edu/books/hardcover/9780691167633/the-collected-works-of-spinoza-volume-ii"><i class="booktitle">The Collected Works of Spinoza, Volume II</i></a>,
+              edited by Edwin Curley (Princeton University Press, 1985 and 2016, respectively.
+            </li>
+            <li><a href="https://press.princeton.edu/books/paperback/9780691020372/behind-the-geometrical-method"><i class="booktitle">Behind the Geometrical Method: A Reading of Spinoza's Ethics</i></a>
+              by Edwin Curley (Princeton University Press, 1988),
+            </li>
+            <li><a href="https://www.hackettpublishing.com/a-study-of-spinoza-s-ethics"><i class="booktitle">A Study of Spinoza's Ethics</i></a>
+              by Jonathan Bennett (Hackett, 1984),
+            </li>
+            <li><a href="https://global.oup.com/academic/product/the-explainability-of-experience-9780199350162"><i class="booktitle">The Explainability of Experience: Realism and Subjectivity in Spinoza's Theory of the Human Mind</i></a>
+              by Ursula Renz (Oxford University Press, 2018),
+            </li>
+            <li><a href="https://global.oup.com/academic/product/spinoza-on-philosophy-religion-and-politics-9780198701217"><i class="booktitle">Spinoza on Philosophy, Religion, and Politics: The Theologico-Political Treatise</i></a>
+              by Susan James (Oxford University Press, 2014).
+            </li>
+            <!--@@also check other books/links in the article-->
+          </ul>
+        </li>
       </ul>
     </section>
 
@@ -2261,55 +2322,6 @@
         <li>Warburton, Nigel:
           <a href="https://aeon.co/essays/without-conversation-philosophy-is-just-dogma">Talk with me / >Without conversation, philosophy is just dogma</a>,
           <i class="magazine">Aeon</i>, no date (September/October 2017).
-        </li>
-        <li>
-          <a href="https://fivebooks.com/best-books/socrates/">The best books on Socrates recommended by M M McCabe</a>,
-          <i class="website">Five Books</i>, no date (possibly April 2016).
-          <a href="https://www.kcl.ac.uk/people/mm-mccabe">M. M. McCabe</a>, author of
-          <i class="booktitle">Platonic Conversations</i>, recommends the following books:
-          <ul>
-            <li><i class="booktitle">Apology</i> by Plato (included in <abbr>e.g.</abbr>
-              <a href="https://www.hackettpublishing.com/five-dialogues"><i class="booktitle">Five Dialogues: Euthyphro, Apology, Crito, Meno, Phaedo</i></a>
-              translated by G. M. A. Grube, an edition that provides detailed footnotes).
-            </li>
-            <li><i class="booktitle">The Clouds</i>, a comedy by Aristophanes.
-            </li>
-            <li><i class="booktitle">Theaetetus</i> by Plato.
-            </li>
-            <li>
-              <a href="https://www.cornellpress.cornell.edu/book/9780801497872/socrates-ironist-and-moral-philosopher/"><i class="booktitle">Socrates, Ironist and Moral Philosopher</i></a>
-              by Gregory Vlastos (Cornell University Press, 1991).
-            </li>
-            <li>
-              <a href="https://www.ucpress.edu/book/9780520224902/the-art-of-living"><i class="booktitle">The Art of Living: Socratic Reflections from Plato to Foucault</i></a>
-              by Alexander Nehamas (University of California Press, 2000).
-            </li>
-          </ul>
-        </li>
-        <li>
-          <a href="https://fivebooks.com/best-books/spinoza-steven-nadler/">The best books on Spinoza recommended by Steven Nadler</a>,
-          <i class="website">Five Books</i>, 14.10.2020.
-          Steven Nadler recommends the following books:
-          <ul>
-            <li><a href="https://press.princeton.edu/books/hardcover/9780691072227/the-collected-works-of-spinoza-volume-i"><i class="booktitle">The Collected Works of Spinoza, Volume I</i></a>
-              and
-              <a href="https://press.princeton.edu/books/hardcover/9780691167633/the-collected-works-of-spinoza-volume-ii"><i class="booktitle">The Collected Works of Spinoza, Volume II</i></a>,
-              edited by Edwin Curley (Princeton University Press, 1985 and 2016, respectively.
-            </li>
-            <li><a href="https://press.princeton.edu/books/paperback/9780691020372/behind-the-geometrical-method"><i class="booktitle">Behind the Geometrical Method: A Reading of Spinoza's Ethics</i></a>
-              by Edwin Curley (Princeton University Press, 1988),
-            </li>
-            <li><a href="https://www.hackettpublishing.com/a-study-of-spinoza-s-ethics"><i class="booktitle">A Study of Spinoza's Ethics</i></a>
-              by Jonathan Bennett (Hackett, 1984),
-            </li>
-            <li><a href="https://global.oup.com/academic/product/the-explainability-of-experience-9780199350162"><i class="booktitle">The Explainability of Experience: Realism and Subjectivity in Spinoza's Theory of the Human Mind</i></a>
-              by Ursula Renz (Oxford University Press, 2018),
-            </li>
-            <li><a href="https://global.oup.com/academic/product/spinoza-on-philosophy-religion-and-politics-9780198701217"><i class="booktitle">Spinoza on Philosophy, Religion, and Politics: The Theologico-Political Treatise</i></a>
-              by Susan James (Oxford University Press, 2014).
-            </li>
-            <!--@@also check other books/links in the article-->
-          </ul>
         </li>
         <li>
           <a href="https://www.keithfrankish.com/">Keith Frankish: Tricks of the Mind</a>:
