Add: Hodge et al: Does Religion Cause Violence? Multidisciplinary Perspectives on Violence and Religion in the Modern World

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -431,7 +431,7 @@
           <a href="http://editions.bnf.fr/en/node/2951"><abbr>ISBN</abbr> 978-2-7177-2688-6</a>.
           <br /><span lang="en-GB">Short book about sacrifice in
           <a href="https://en.wikipedia.org/wiki/Vedic_mythology">vedic religion</a>.
-          <br />Translations: </span>
+          <br />Translations:</span>
           <ul>
             <li lang="en-GB">
               <i class="booktitle">Sacrifice</i>. Translated by Matthew Patillo and David Dawson. Breakthroughs in Mimetic Theory Series. Michigan State University Press, 2011.
@@ -721,6 +721,11 @@
           <i class="booktitle">Shakespeare et son double. Les sonnets de Shakespeare à la lumière de la théorie mimétique de René Girard</i>. L'Hermattan</span>, 2011. (256 pages)
           <a href="https://www.editions-harmattan.fr/index.asp?navig=catalogue&amp;obj=livre&amp;no=35865"><abbr>ISBN</abbr> 978-2-296-55950-9</a>.
         </li>
+        <li>Hodge, Joel; Cowdell, Scott; Fleming, Chris; Osborn, Carly (editors):
+          <i class="booktitle">Does Religion Cause Violence? Multidisciplinary Perspectives on Violence and Religion in the Modern World</i>.
+          Violence, Desire, and the Sacred. Bloomsbury, 2019. (272 pages)
+          <a href="https://www.bloomsbury.com/uk/does-religion-cause-violence-9781501354632/"><abbr>ISBN</abbr> 9781501354632</a>.
+        </li>
         <li>Merrill, Trevor Cribben:
           <i class="booktitle">The Book of Imitation and Desire: Reading Milan Kundera with Rene Girard </i>. Bloomsbury, 2013 (2014: paperback). (208 pages)
           <a href="https://www.bloomsbury.com/uk/the-book-of-imitation-and-desire-reading-milan-kundera-with-rene-girard-9781628925234/"><abbr>ISBN</abbr> 9781628925234</a>.
@@ -814,6 +819,10 @@
         </li>
         <!--Wolfgang Palaver: https://uibk.academia.edu/WolfgangPalaver & https://de.wikipedia.org/wiki/Wolfgang_Palaver -->
       </ul>
+      <!--@@add other titles from:
+        https://www.rene-girard.fr/57_p_44345/publications.html
+        https://www.bloomsbury.com/uk/series/violence-desire-and-the-sacred/?pagesize=25
+      -->
     </section>
 
     <section>
