Add: Bandera: Mimesis Conflictiva

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -639,6 +639,19 @@
           on Paul Nuechterlein's Girardian Lectionary website.
           <!--See also http://stmaryvalleybloom.org/violence.html -->
         </li>
+        <li><span lang="es">Bandera, Cesáreo:
+          <i class="booktitle">Mimesis Conflictiva: Ficción literaria y violencia en Cervantes y Calderón</i>.
+          Madrid: Gredos</span>, 1975.
+          <!--Listed in Cervantes Bibliography at https://facultystaff.richmond.edu/~ahermida/biblio.htm -->
+          <a href="https://www.worldcat.org/title/mimesis-conflictiva-ficcion-literaria-y-violencia-en-cervantes-y-calderon/oclc/3052527"><i class="booktitle" lang="es">Mimesis Conflictiva</i> in WorldCat</a>.
+          <br />French translation:
+          <span lang="fr"><i class="booktitle">Mimésis conflictuelle. Fiction littéraire et violence chez Cervantès et Calderon</i>.
+          Cahiers de l'<abbr title="Association Recherches Mimétiques">ARM</abbr>. Editions Petra</span>, 2016. (246 pages)
+          <a href="https://www.editionspetra.fr/livres/mimesis-conflictuelle-fiction-litteraire-et-violence-chez-cervantes-et-calderon"><abbr>ISBN</<abbr> 9782847431636</a>.
+          <br />See also:
+          el Saffar, Ruth: <a href="http://www.cervantesvirtual.com/obra-visor/cervantes-bulletin-of-the-cervantes-society-of-america--29/html/0277fc14-82b2-11df-acc7-002185ce6064_22.html">On Beyond Conflict</a>,
+          <i class="magazine">Bulletin of the Cervantes Society of America</i>, Volume I, Numbers 1-2, Fall 1981.
+        </li>
         <li>Bubbio, Paolo Diego; Fleming, Chris (editors):
           <i class="booktitle">Mimetic Theory and Film</i>. Violence, Desire, and the Sacred. Bloomsbury, 2020. (224 pages)
           <a href="https://www.bloomsbury.com/uk/mimetic-theory-and-film-9781501367663/"><abbr>ISBN</abbr> 9781501367663</a>.
