Add: Goodhart: Möbian Nights

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -726,6 +726,15 @@
           <i class="booktitle">Mimesis and Science: Empirical Research on Imitation and the Mimetic Theory of Culture and Religion</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2011. (272 pages)
           <a href="https://msupress.org/9781611860238/mimesis-and-science/"><abbr>ISBN</abbr> 9781611860238</a>.
         </li>
+        <li>Goodhart, Sandor:
+          <i class="booktitle">Möbian Nights: Reading Literature and Darkness</i>.
+          Violence, Desire, and the Sacred. Bloomsbury, 2019. (352 pages)
+          <a href="https://www.bloomsbury.com/uk/mobian-nights-9781501350818/"><abbr>ISBN</abbr> 9781501350818</a>.
+          <br />From the publisher's book description:
+          <q>(&hellip;) Challenging customary “aesthetic” assumptions that we write in order not to die, Sandor Goodhart suggests (with Kafka) we write to die.
+          Drawing upon analyses developed by Girard, Foucault, Blanchot, and Levinas (along with examples from Homer to Beckett), <i class="booktitle">Möbian Nights</i> proposes that all literature works “autobiographically”, which is to say, in the wake of disaster;
+          with the credo “I died; therefore, I am”; and for which the language of topology (for example, the “Möbius strip”) offers a vocabulary for naming the “deep structure” of such literary, critical, and scriptural sacrificial and anti-sacrificial dynamics.</q>
+        </li>
         <li>Grande, Per Bjørnar:
           <i class="booktitle">Desire: Flaubert, Proust, Fitzgerald, Miller, Lana Del Rey</i>. Breakthroughs in Mimetic Theory. Michigan State University Press, 2020. (272 pages)
           <a href="https://msupress.org/9781611863215/desire/"><abbr>ISBN</abbr> 9781611863215</a>.
