--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -739,6 +739,12 @@
           <i class="booktitle">Desire: Flaubert, Proust, Fitzgerald, Miller, Lana Del Rey</i>. Breakthroughs in Mimetic Theory. Michigan State University Press, 2020. (272 pages)
           <a href="https://msupress.org/9781611863215/desire/"><abbr>ISBN</abbr> 9781611863215</a>.
         </li>
+        <li><span lang="de">Hoogsteder-Kattenburg Schuler, Nancy:
+          <i class="booktitle">Franz Kafka: Mimesis und Gewalt: 24 Erzählungen im Lichte von René Girards Theorie</i>.</span>
+          Maastricht: Shaker Publishing, 2003. (399 pages)
+          <abbr>ISBN</abbr> 9042302135.
+          <!--@@€19.89: Versandantiquariat Stosch: https://www.buchfreund.de/de/d/p/86125673/franz-kafka-mimesis-und-gewalt -->
+        </li>
         <li><span lang="fr">Hillion, Joël:
           <i class="booktitle">Shakespeare et son double. Les sonnets de Shakespeare à la lumière de la théorie mimétique de René Girard</i>. L'Hermattan</span>, 2011. (256 pages)
           <a href="https://www.editions-harmattan.fr/index.asp?navig=catalogue&amp;obj=livre&amp;no=35865"><abbr>ISBN</abbr> 978-2-296-55950-9</a>.
