Add: Zuidervaart: Adorno's Aesthetic Theory: The Redemption of Illusion

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1315,6 +1315,11 @@
           <a href="https://www.researchgate.net/publication/200026203_Adorno's_Other_Son_Derrida_and_the_Future_of_Critical_Theory">Adorno's Other Son: Derrida and the Future of Critical Theory</a>,
           <i class="journal">Social Semiotics</i>, 16.3 (September 2006).<!--@@PDF available on ResearchGate-->
         </li>
+        <li>Zuidervaart, Lambert:
+          <i class="booktitle"> Adorno's Aesthetic Theory: The Redemption of Illusion</i>.
+           Studies in Contemporary German Social Thought. <abbr>MIT</abbr> Press, 1991 (1993). (416 pages)
+          <a href="https://mitpress.mit.edu/books/adornos-aesthetic-theory"><abbr>ISBN</abbr> 9780262740166</a>.
+        </li>
       </ul>
     </section>
 
