Add: Show this selfie from the top of Everest to a flat Earth conspiracy theorist

--- a/science/index.html
+++ b/science/index.html
@@ -1339,7 +1339,7 @@
         <li>Tetrad:
           <ul>
             <li>Glymour, Clark N.:
-              <a href="http://repository.cmu.edu/cgi/viewcontent.cgi?article=1484&context=philosophy">Discovering causal structure: artificial intelligence, philosophy of science and statistical modeling</a>.
+              <a href="http://repository.cmu.edu/cgi/viewcontent.cgi?article=1484&amp;context=philosophy">Discovering causal structure: artificial intelligence, philosophy of science and statistical modeling</a>.
               Technical report. Dietrich College of Humanities and Social Sciences at Research Showcase at Carnegie Mellon University, 1986.
               <!--@@PDF-->
             </li>
@@ -1482,6 +1482,13 @@
         <li>Bort, Ryan:
           <a href="https://www.rollingstone.com/politics/politics-news/bots-fueling-climate-science-denialism-twitter-956335/">Study: Bots Are Fueling Online Climate Science Denialism </a>,
           <i class="magazine">Rolling Stone</i>, 21.02.2020.
+        </li>
+        <li>Staples, Louis:
+          <a href="https://www.indy100.com/news/flatearthconspiracytheoryselfiemounteverest-8297226">Show this selfie from the top of Everest to a flat Earth conspiracy theorist. Immediately</a>,
+          <i class="website">Indy100</i>, 10.04.2018.
+          See the picture
+          <a href="https://www.reddit.com/r/pics/comments/8av8rk/checkmate_flat_earth_society/">Checkmate Flat Earth Society</a>,
+          posted by amazed_spirit on 09.04.2018.
         </li>
         <!--@@science communication:-->
         <li>de Melo-Martín, Inmaculada; Intemann, Kristen:
