--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1373,6 +1373,39 @@
         </li>
       </ul>
 
+      <h3>Baruch Spinoza / Benedict de Spinoza (1632 – 1677)</h3>
+      <ul>
+        <li>
+          <a href="https://fivebooks.com/best-books/spinoza-steven-nadler/">The best books on Spinoza recommended by Steven Nadler</a>,
+          <i class="website">Five Books</i>, 14.10.2020.
+          Steven Nadler recommends the following books:
+          <ul>
+            <li><a href="https://press.princeton.edu/books/hardcover/9780691072227/the-collected-works-of-spinoza-volume-i"><i class="booktitle">The Collected Works of Spinoza, Volume I</i></a>
+              and
+              <a href="https://press.princeton.edu/books/hardcover/9780691167633/the-collected-works-of-spinoza-volume-ii"><i class="booktitle">The Collected Works of Spinoza, Volume II</i></a>,
+              edited by Edwin Curley (Princeton University Press, 1985 and 2016, respectively.
+            </li>
+            <li><a href="https://press.princeton.edu/books/paperback/9780691020372/behind-the-geometrical-method"><i class="booktitle">Behind the Geometrical Method: A Reading of Spinoza's Ethics</i></a>
+              by Edwin Curley (Princeton University Press, 1988),
+            </li>
+            <li><a href="https://www.hackettpublishing.com/a-study-of-spinoza-s-ethics"><i class="booktitle">A Study of Spinoza's Ethics</i></a>
+              by Jonathan Bennett (Hackett, 1984),
+            </li>
+            <li><a href="https://global.oup.com/academic/product/the-explainability-of-experience-9780199350162"><i class="booktitle">The Explainability of Experience: Realism and Subjectivity in Spinoza's Theory of the Human Mind</i></a>
+              by Ursula Renz (Oxford University Press, 2018),
+            </li>
+            <li><a href="https://global.oup.com/academic/product/spinoza-on-philosophy-religion-and-politics-9780198701217"><i class="booktitle">Spinoza on Philosophy, Religion, and Politics: The Theologico-Political Treatise</i></a>
+              by Susan James (Oxford University Press, 2014).
+            </li>
+            <!--@@also check other books/links in the article-->
+          </ul>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=G5cAxJCz1Xk">Susan James: Why Should We Read Spinoza? (07/11/2014)</a>
+          (<i class="ytchannel">RoyIntPhilosophy</i> on YouTube, 48 minutes, 08.11.2020).
+        </li>
+      </ul>
+
       <h3>David Hume (1711 – 1776)</h3>
       <ul>
         <li>Simon Blackburn:
@@ -2104,31 +2137,6 @@
               <a href="https://www.ucpress.edu/book/9780520224902/the-art-of-living"><i class="booktitle">The Art of Living: Socratic Reflections from Plato to Foucault</i></a>
               by Alexander Nehamas (University of California Press, 2000).
             </li>
-          </ul>
-        </li>
-        <li>
-          <a href="https://fivebooks.com/best-books/spinoza-steven-nadler/">The best books on Spinoza recommended by Steven Nadler</a>,
-          <i class="website">Five Books</i>, 14.10.2020.
-          Steven Nadler recommends the following books:
-          <ul>
-            <li><a href="https://press.princeton.edu/books/hardcover/9780691072227/the-collected-works-of-spinoza-volume-i"><i class="booktitle">The Collected Works of Spinoza, Volume I</i></a>
-              and
-              <a href="https://press.princeton.edu/books/hardcover/9780691167633/the-collected-works-of-spinoza-volume-ii"><i class="booktitle">The Collected Works of Spinoza, Volume II</i></a>,
-              edited by Edwin Curley (Princeton University Press, 1985 and 2016, respectively.
-            </li>
-            <li><a href="https://press.princeton.edu/books/paperback/9780691020372/behind-the-geometrical-method"><i class="booktitle">Behind the Geometrical Method: A Reading of Spinoza's Ethics</i></a>
-              by Edwin Curley (Princeton University Press, 1988),
-            </li>
-            <li><a href="https://www.hackettpublishing.com/a-study-of-spinoza-s-ethics"><i class="booktitle">A Study of Spinoza's Ethics</i></a>
-              by Jonathan Bennett (Hackett, 1984),
-            </li>
-            <li><a href="https://global.oup.com/academic/product/the-explainability-of-experience-9780199350162"><i class="booktitle">The Explainability of Experience: Realism and Subjectivity in Spinoza's Theory of the Human Mind</i></a>
-              by Ursula Renz (Oxford University Press, 2018),
-            </li>
-            <li><a href="https://global.oup.com/academic/product/spinoza-on-philosophy-religion-and-politics-9780198701217"><i class="booktitle">Spinoza on Philosophy, Religion, and Politics: The Theologico-Political Treatise</i></a>
-              by Susan James (Oxford University Press, 2014).
-            </li>
-            <!--@@also check other books/links in the article-->
           </ul>
         </li>
       </ul>
