Add: Warburton: The Best Philosophy Books of 2020

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2139,6 +2139,27 @@
             </li>
           </ul>
         </li>
+        <li>Warburton, Nigel:
+          <a href="https://fivebooks.com/best-books/philosophy-2020-nigel-warburton/">The Best Philosophy Books of 2020</a>,
+          <i class="website">Five Books</i>, 25.11.2020. The books are the following:
+          <ul>
+            <li>
+              <i class="booktitle">The Philosopher Queens: The lives and legacies of philosophy's unsung women</i> by Lisa Whiting and Rebecca Buxton,
+            </li>
+            <li>
+              <i class="booktitle">The Meaning of Travel: Philosophers Abroad</i> by Emily Thomas,
+            </li>
+            <li>
+              <i class="booktitle">Frank Ramsey: A Sheer Excess of Powers</i> by Cheryl Misak,
+            </li>
+            <li>
+              <i class="booktitle">The Murder of Professor Schlick: The Rise and Fall of the Vienna Circle</i> by David Edmonds,
+            </li>
+            <li>
+              <i class="booktitle">Metazoa: Animal Life and the Birth of the Mind</i> by Peter Godfrey-Smith.
+            </li>
+          </ul>
+        </li>
       </ul>
     </section>
 
