--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -94,6 +94,11 @@
           <i class="booktitle">The Young Karl Marx: German Philosophy, Modern Politics, and Human Flourishing</i>. Ideas in Context. Cambridge University Press, 2009. (340 pages)
           <a href="http://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/young-karl-marx-german-philosophy-modern-politics-and-human-flourishing?format=PB"><abbr>ISBN</abbr> 9780521118262</a>.
         </li>
+        <li>Musto, Marcello:
+          <i class="booktitle">The Last Years of Karl Marx: An Intellectual Biography</i>. Stanford University Press, 2020. (208 pages)
+          <a href="https://www.sup.org/books/title/?id=30542"><abbr>ISBN</abbr> 9781503612525</a>.
+          <!--@@see also Musto's other books: https://www.marcellomusto.org/books/by-year -->
+        </li>
       </ul>
     </section>
 
@@ -439,6 +444,10 @@
         </li>
       </ul>
     </section>
+    -->
+    <!--@@see also:
+      * https://marxandphilosophy.org.uk/reviews/18072_karl-marx-and-the-birth-of-modern-society-the-life-of-marx-and-the-development-of-his-work-volume-i-1818-1841-by-michael-heinrich-reviewed-by-chris-byron/
+      * https://theculturetrip.com/europe/germany/articles/radical-reads-a-new-karl-marx-biography-to-set-his-record-straight/
     -->
   </main>
 
